VLCを利用してMKVやWEBMを再生できるようにした

--- a/src/PeerstPlayer/PeerstPlayer.csproj
+++ b/src/PeerstPlayer/PeerstPlayer.csproj
@@ -188,6 +188,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MoviePlayer\FlashMoviePlayerControl.resx">
       <DependentUpon>FlashMoviePlayerControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MoviePlayer\VlcMediaPlayerControl.resx">
       <DependentUpon>VlcMediaPlayerControl.cs</DependentUpon>
