--- a/src/PeerstLib/PeerstLib.csproj
+++ b/src/PeerstLib/PeerstLib.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Serializer.cs" />
     <Compile Include="Util\SettingSerializer.cs" />
+    <Compile Include="Util\TextUtil.cs" />
     <Compile Include="Util\WebUtil.cs" />
   </ItemGroup>
   <ItemGroup>
